--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -21,7 +21,7 @@
 		<div th:if="${role[0].role == T(com.krb.shakotsav.bean.definedentity.DefinedRole).SUPER_ADMIN.roleName}">
 			<a href="#" class="ui-btn">Manage Users</a>
 			<a href="tableManagement" class="ui-btn">Manage Tables</a>
-			<a href="#" class="ui-btn">Manage Items</a>
+			<a href="itemManagement" class="ui-btn">Manage Items</a>
 		</div>
 	</div><!-- /content -->
 
