Request Polling mechanism and all

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -22,6 +22,7 @@
 			<a href="#" class="ui-btn">Manage Users</a>
 			<a href="tableManagement" class="ui-btn">Manage Tables</a>
 			<a href="itemManagement" class="ui-btn">Manage Items</a>
+			<a href="tableItemPushPollView" class="ui-btn">Table Owner View</a>
 		</div>
 	</div><!-- /content -->
 
