--- a/src/main/resources/templates/item-management.html
+++ b/src/main/resources/templates/item-management.html
@@ -12,6 +12,7 @@
 <body>
 <div data-role="page">
 	<div data-role="header">
+		<a href="home" data-icon="home">Home</a>
 		<h1>Item Manage</h1>
 	</div><!-- /header -->
 
