Pull push mechanism

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -23,6 +23,7 @@
 			<a href="tableManagement" class="ui-btn">Manage Tables</a>
 			<a href="itemManagement" class="ui-btn">Manage Items</a>
 			<a href="tableItemPushPollView" class="ui-btn">Table Owner View</a>
+			<a href="tableItemPushPollViewForDispatcher" class="ui-btn">Dispatcher View</a>
 		</div>
 	</div><!-- /content -->
 
