--- a/src/main/resources/templates/table-item-pull-push.html
+++ b/src/main/resources/templates/table-item-pull-push.html
@@ -24,7 +24,6 @@ $( document ).delegate("#page", "pageinit", function() {
 	 */
 $(document).ready(function () {
 	//console.log( "ready!" );
-	
 	var listdata = $(".list-view-custom").listview({
    		inset: true
    	});
@@ -44,15 +43,17 @@ $(document).ready(function () {
 		    	for(var i=0; i<data.table.length; i++){
 					
 		    		var innerLIs = "";
+		    		var counter = 0;
 		    		for(var j=0; j<data.table[i].itemsData.length; j++){
 		    			
 		    			var hiddenTableId = "<input type='hidden' class='hiddenTableId' value='"+data.table[i].tableId+"'></input>";
 		    			var hiddenItemId = "<input type='hidden' class='hiddenItemId' value='"+data.table[i].itemsData[j].itemId+"'></input>";
 		    			
 		    			if(data.table[i].itemsData[j].status == 'Requested'){
-			    			innerLIs += "<li>"+data.table[i].itemsData[j].itemName+"<span class='image-transit'></span><span><button class='received-call ui-btn ui-corner-all ui-btn-inline ui-mini'>"+hiddenTableId+hiddenItemId+"Received</button></span></li>";		    				
+			    			innerLIs += "<li><span>"+data.table[i].itemsData[j].itemName+"</span><span><button class='received-call ui-btn ui-corner-all ui-btn-inline ui-mini'>"+hiddenTableId+hiddenItemId+"In Progress</button></span></li>";
+			    			counter++;
 		    			}else{
-			    			innerLIs += "<li>"+data.table[i].itemsData[j].itemName+"<span class=''><button class='request-call ui-btn ui-corner-all ui-btn-inline ui-mini'>"+hiddenTableId+hiddenItemId+"Request</button></span></li>";
+			    			innerLIs += "<li><span>"+data.table[i].itemsData[j].itemName+"</span><span><button class='request-call ui-btn ui-corner-all ui-btn-inline ui-mini'>"+hiddenTableId+hiddenItemId+"Request</button></span></li>";
 		    			}
 		    		}
 		    		
@@ -61,8 +62,10 @@ $(document).ready(function () {
 		    		var hiddenDivs = "<div class='inner-hidden'>"+innerULs+"</div>";
 		    		
 		    		var spanBubble = "<span class='ui-li-count'>"+data.table[i].itemsData.length+"</span>";
+		    		var spanBubble1 = "<span class='ui-li-count count-second'>"+counter+"</span>";
+					var hiddenTableName = "<span class='hiddenTableName' style='display:none;'>"+data.table[i].tableName+"</span>";
 		    		
-		    		var innerHeaderH2 = "<h2><span data-icon='ui-icon-arrow-u'></span>"+data.table[i].tableName+spanBubble+"</h2>";
+		    		var innerHeaderH2 = "<h2><span data-icon='ui-icon-arrow-u'></span>"+data.table[i].tableName+spanBubble+spanBubble1+hiddenTableName+"</h2>";
 		    		
 		    		var outerLI = "<li data-role='collapsible' data-iconpos='right' data-inset='false'>"+innerHeaderH2+hiddenDivs+"</li>";
 		    		//alert(outerLI);
@@ -75,7 +78,7 @@ $(document).ready(function () {
 		    	   		inset: true
 		    	   	});
 		    		
-		    		$("#popupBasic h3").html($(this).text());
+		    		$("#popupBasic h3").html($(this).find('.hiddenTableName').text());
 		    		$("#popupBasic p").html($(this).parent().find('.inner-hidden').html());
 		    		$("#popupBasic").popup('open');
 		    	});
@@ -121,6 +124,8 @@ $(document).ready(function () {
 		    }
 		});
 	})();
+	
+	
 	
 	var popupRequestReceivedToDisplay = false;
 	
